# quadrocopter_central

./: .gitignore  CMakeLists.txt  Makefile  README.md  auto_build.sh  conanfile.py  conanfilessssss.txtssss  set_env.sh  ubuntu_to_rpi
MC_Stack/: .mxproject  CMakeLists.txt  MC_Stack.ioc  Makefile  Makefile_gen  README.md
MC_Stack/Core/Inc/: main.h  stm32h7xx_it.h
MC_Stack/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
adapters/: i2c_adapter.cpp  i2c_adapter.hpp
src/: CMakeLists.txt  gy86_driver.cpp  gy86_driver.hpp  i2c_driver.cpp  i2c_driver.hpp  i2c_drivers.cpp  main.cpp  parameters.hpp
src/Remote_Controll/: CMakeLists.txt  PID.cpp  PID.hpp  UART_read.cpp  UART_read.hpp  controll_master.cpp  controll_master.hpp  data_types.hpp  motor_controller.cpp  motor_controller.hpp  rempotecontroll_parameters.hpp
src/Sensor_Read/: CMakeLists.txt
src/Sensor_Read/Kalman/: CMakeLists.txt
src/Sensor_Read/gy86/: CMakeLists.txt  gy86_driver.cpp  gy86_driver.hpp  gy86_parameters.hpp  hmc_5883l.cpp  hmc_5883l.hpp  mpu_6050.cpp  mpu_6050.hpp
src/Sensor_Read/i2c_adapter/: CMakeLists.txt  i2c_adapter.cpp  i2c_adapter.hpp
src/Sensor_Read/sensor_master/: CMakeLists.txt  sensor_master.cpp  sensor_master.hpp
tests/: CMakeLists.txt  gy86_test.cpp  i2c_test.cpp  main.cpp
tests/stubs/: i2c_adapter.cpp  i2c_adapter.hpp
